bug 22127 - Search textbox context menu items are mis-aligned (r=mook)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@19338 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -1064,7 +1064,7 @@ sb-servicepane-node.active > vbox > hbox.servicepane-node-info > stack > hbox > 
    * Featherers want to */
 }
 
-#searchbar menupopup menuitem {
+.searchbar-engine-button menupopup menuitem {
   margin-left: -8px !important;
 }
 
